# market-data-lake

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
config/: config.yaml
notebooks/: 01_eda.ipynb
src/: config.py
src/ingest/: prices_stooq.py  universe.py
src/load/: duckdb_load.py
src/transform/: normalize.py
